# edge-catcher

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  download_loop.sh  mypy-baseline.txt  package-lock.json  pyproject.toml  ruff.toml  start.bat  start.py  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: adapter_registry.py  auth.py  backtest_service.py  config_helpers.py  dispatchers.py  download_service.py  main.py  models.py  pipeline_service.py  reporting_service.py  research_tasks.py  tasks.py
config/: hypotheses.yaml  live-trader.example.yaml  markets-altcrypto.yaml  markets-btc.yaml  markets-crypto.yaml  markets-entertainment.yaml  markets-esports.yaml  markets-financials.yaml  markets-politics.yaml  markets-polymarket.yaml  markets-sports.yaml  markets-weather.yaml  markets.yaml  notifications.example.yaml  paper-trader.example.yaml
config-crypto/: fees.yaml  markets.yaml
config-entertainment/: markets.yaml
config-esports/: fees.yaml  markets.yaml
config-financials/: markets.yaml
config-politics/: markets.yaml
config-sports/: fees.yaml  hypotheses.yaml  markets.yaml
config-weather/: markets.yaml
deploy/: README.md  edge-catcher-15m.service  edge-catcher-download.service  install-paper-trader.sh  install-service.sh  live-trader.service  ohlc-refresher.service  paper-trader-15m.service  paper-trader.service  run-download.sh
docs/: adapter-guide.md  architecture.md  deployment-docker.md  handoff-sizing-strategy.md  llm-providers.md  quickstart.md  reporting.md  roadmap.md  strategy-guide.md  tutorial.md  upgrade-1.1.md  upgrade-1.2.md  upgrade-1.4.md
docs/adr/: 0001-adapter-registry.md
docs/runbooks/: live-cutover.md
edge_catcher/: __init__.py  __main__.py  cross_check.py  fees.py  fill_realism_gate.py
edge_catcher/adapters/: base.py  coinbase.py  kalshi.py
edge_catcher/adapters/coinbase/: __init__.py  adapter.py  registry.py
edge_catcher/adapters/kalshi/: __init__.py  adapter.py  auth.py  fees.py  registry.py
edge_catcher/adapters/polymarket/: __init__.py  adapter.py  fees.py  registry.py
edge_catcher/ai/: client.py  formalizer.py  interpreter.py  strategizer.py
edge_catcher/ai/prompts/: formalizer_system.txt  ideator_system.txt  interpreter_system.txt  refiner_system.txt  strategizer_system.txt
edge_catcher/cli/: __init__.py  _engine_run.py  analyze.py  backtest.py  download.py  formalize.py  interpret.py  live_trade.py  ohlc_refresh.py  paper_trade.py  replay_backtest.py  research.py  utils.py
edge_catcher/data/examples/: demo_markets.db  paper_trades_demo.db
edge_catcher/engine/: discovery.py  dispatch.py  engine.py  execution.py  executor.py  fill_math.py  live_db.py  market_state.py  metrics.py  notifications.py  ohlc_wiring.py  recovery.py  resting.py  risk.py  risk_context_provider.py  strategy_base.py  trade_store.py
edge_catcher/engine/capture/: bundle.py  writer.py
edge_catcher/engine/executors/: honest_paper.py  live.py  paper.py
edge_catcher/engine/replay/: __init__.py  backtester.py  latency_fill.py  loader.py
edge_catcher/hypotheses/: __init__.py  registry.py
edge_catcher/hypotheses/archive/: __init__.py
edge_catcher/hypotheses/examples/: example_hypothesis.py
edge_catcher/hypotheses/kalshi/: __init__.py  price_efficiency.py
edge_catcher/live/: __init__.py  __main__.py  audit.py  cli.py  client.py  config.py  errors.py  ohlc_refresher.py  reconciliation.py  state.py  store.py  venue.py  ws_handlers.py
edge_catcher/monitors/: __init__.py  auth.py  discovery.py  dispatch.py  engine.py  market_state.py  metrics.py  notifications.py  recovery.py  sizing.py  strategy_base.py  trade_store.py
edge_catcher/monitors/capture/: __init__.py  bundle.py  transport.py  writer.py
edge_catcher/monitors/replay/: __init__.py  backtester.py
edge_catcher/notifications/: __init__.py  base.py  dispatcher.py  envelope.py  exceptions.py  loader.py
edge_catcher/reporting/: __init__.py  __main__.py  notify.py
edge_catcher/reports/: __init__.py  formatter.py
edge_catcher/research/: __init__.py  agent.py  audit.py  context_engine.py  data_source_config.py  data_source_resolver.py  evaluator.py  execution_archetype.py  export.py  graduation.py  grid_planner.py  hypothesis.py  journal.py  llm_ideator.py  loop.py  novel_generator.py  observer.py  ohlc_provider.py  refinement.py  reporter.py  run_queue.py  stats_utils.py  test_runner.py  tracker.py
edge_catcher/runner/: __init__.py  backtest.py  event_backtest.py  strategies.py  strategies_example.py  strategies_local.py.example  strategy_parser.py
edge_catcher/storage/: archiver.py  db.py  models.py
tests/: _executor_helper.py  conftest.py  replay_parity_skip.txt  test_adapter_kalshi_fees.py  test_adapter_meta.py  test_agent.py  test_ai.py  test_ai_client_claude_code.py  test_api_backtest.py  test_api_model_settings.py  test_api_reporting.py  test_api_research.py  test_ast_fingerprint.py  test_audit.py  test_bundle_config_snapshot.py  test_capture_bundle.py  test_capture_retention.py  test_capture_transport.py  test_capture_writer.py  test_cli.py  test_cli_shell.py  test_coinbase_adapter.py  test_coinbase_upsert.py  test_config_helpers.py  test_context_engine.py  test_context_rot_integration.py  test_cross_check.py  test_data_source_config.py  test_data_source_resolver.py  test_dead_code_cleanup.py  test_discovery.py  test_dispatch.py  test_dispatch_sizing_wire.py  test_dispatchers.py  test_download_resolve.py  test_engine.py  test_engine_dispatch_dual_slippage_forwarding.py  test_engine_dispatch_executor_wiring.py  test_engine_dispatch_maker.py  test_engine_dispatch_pending_branch.py  (+139 more)
tests/fixtures/: build_demo_db.py  build_demo_markets_db.py  kalshi_responses.py  mock_kalshi_server.py  mock_kalshi_ws.py  reporting_cli_no_notify_golden.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts
(+44 files in other folders)
