[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["edge_catcher*", "api*"]

[project]
name = "edge-catcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "scipy>=1.11",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "psutil>=6.0",
    "zstandard>=0.22",
    "boto3>=1.34",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
live = [
    "websockets>=12.0",
    "aiohttp>=3.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]
ai = [
    "anthropic>=0.40",
    "openai>=1.0",
    "python-dotenv>=1.0",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.9",
]

[project.scripts]
edge-catcher = "edge_catcher.__main__:main"

[tool.mypy]
python_version = "3.11"
files = ["edge_catcher"]
# Exclude gitignored local-only files (per CLAUDE.md private-file rules) — they
# exist on developer machines but not on CI, so they shouldn't enter the gate.
exclude = [
  '^edge_catcher/runner/strategies_local\.py$',
  '^edge_catcher/monitors/strategies_local\.py$',
  '^edge_catcher/hypotheses/local/',
]
ignore_missing_imports = true
# Strict-ish defaults; baseline cleanup landed all 63 pre-existing errors as
# real fixes, so the gate is now zero-tolerance: any new type error fails CI.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# monitors/auth.py uses cryptography's RSA private-key sign() interface.
# The cryptography library's PrivateKey union changes shape across versions
# (newer versions add post-quantum types like MLDSAxxPrivateKey, MLKEMxxxPrivateKey),
# so per-version mypy errors here are environment-dependent and not actionable as
# a code-quality signal. Ignore for now; revisit if/when we narrow the union via
# explicit isinstance() checks.
[[tool.mypy.overrides]]
module = "edge_catcher.monitors.auth"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"requires_bundles: tests that require local R2-downloaded bundles in data/bundles/<day>/",
]
filterwarnings = [
	# The monitors.notifications module emits a DeprecationWarning at import to
	# signal external callers to migrate to edge_catcher.notifications. Internal
	# callers (monitors.engine, monitors.dispatch) still use it pending migration
	# per spec §11. Suppress the noise from internal-caller imports during pytest;
	# the test_monitors_notifications_deprecated test still verifies the warning
	# fires by using catch_warnings + simplefilter("always") locally.
	#
	# Filter-spec note: pytest matches the `module` field against the warning's
	# REPORTED location (governed by `stacklevel`). monitors.notifications uses
	# stacklevel=2, so the warning is attributed to the CALLER (monitors.dispatch
	# / monitors.engine), not monitors.notifications itself. Targeting the message
	# regex is robust against stacklevel changes and importer-module identity.
	"ignore:edge_catcher.monitors.notifications is deprecated:DeprecationWarning",
]
